Commit to callreports project

--- a/ruby/rails/callreports/app/views/reports/index.html.erb
+++ b/ruby/rails/callreports/app/views/reports/index.html.erb
@@ -1,4 +1,16 @@
 <%= flash[:notice] %>
+
+<div>
+	<h4>Import the csv</h4>
+	<%= form_tag import_reports_path, multipart: true do %>
+		<%= file_field_tag :file %>
+		<%= submit_tag "Import CSV" %>
+	<% end %>
+</div>
+</br>
+<%= link_to "Run Reports", new_report_path %>
+
+
 <table>
 	<thead>
 		<tr>
@@ -47,13 +59,6 @@
 		
 </table>
 
-<div>
-	<h4>Import the csv</h4>
-	<%= form_tag import_reports_path, multipart: true do %>
-		<%= file_field_tag :file %>
-		<%= submit_tag "Import CSV" %>
-	<% end %>
-</div>
 
 
 
