Cleaned up routes to remove unneeded actions and some UI improvements

--- a/ruby/rails/callreports/app/views/reports/index.html.erb
+++ b/ruby/rails/callreports/app/views/reports/index.html.erb
@@ -12,7 +12,7 @@
 	
 </div>
 </br>
-<%= link_to "Run Reports", new_report_path %>
+<%= link_to "Run Reports", run_reports_path %>
 
 
 <table class ="table table-striped">
