--- a/ruby/rails/callreports/app/views/reports/run.html.erb
+++ b/ruby/rails/callreports/app/views/reports/run.html.erb
@@ -4,14 +4,21 @@
 	</header>
 </div>
 
-<div class="container text-center">
+
 	<div class="row content>
-		<div class="col-sm-2 sidenav">
-			<p><%= link_to "Inbound Calls", inbound_path %></p>
-			<p><%= link_to "Outbound Calls", outbound_path %></p>
-			<p><a href="#">Total Hold Time</a></p>
+		<div class="col-sm-4 sidenav-left">
+			<ul style="list-style-type:none">
+				<li><p><%= link_to "Inbound Call Summary", inbound_reports_path %></p></li>
+				<li><p><%= link_to "Outbound Call Summary", outbound_reports_path %></p></li>
+				<li><p><%= link_to "Outbound Calls by Extension", outbound_reports_path %></p></li>
+				<li><p><%= link_to "Inbound Summary to Extension", outbound_reports_path %></p></li>
+				<li><p><%= link_to "Inbound Summary to Group", outbound_reports_path %></p></li>
+
+
+
+			</ul>
 
 			
 		</div>
 	</div>
-</div>
+
