--- a/ruby/rails/callreports/app/views/reports/run.html.erb
+++ b/ruby/rails/callreports/app/views/reports/run.html.erb
@@ -11,7 +11,7 @@
 		
 			<div id="filter"><li><p><%= link_to "Inbound Call Summary", inbound_reports_path , class: "btn btn-primary"%></p></li></div>
 			<div id="filter"><li><p><%= link_to "Outbound Call Summary", outbound_reports_path, class: "btn btn-primary" %></p></li></div>
-			<li><p><%= link_to "Outbound Calls by Extension", outbound_reports_path %></p></li>
+			<div id="filter"><li><p><%= link_to "Inbound Summary to Group", inboundtogroup_reports_path, class: "btn btn-primary" %></p></li></div>
 			<li><p><%= link_to "Inbound Summary to Extension", outbound_reports_path %></p></li>
 			<li><p><%= link_to "Inbound Summary to Group", outbound_reports_path %></p></li>
 		</ul>
