--- a/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
+++ b/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
@@ -4,7 +4,7 @@
 <span><%= @total %></span>
 </br>
 <b> Total Talking Time</b>
-<span><%= @totaltalk %></span>
+<span><%= @calltotals %></span>
 </br>
 <b> Total Ring Time</b>
 <span><%= @totalring %></span>
