--- a/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
+++ b/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
@@ -1,10 +1,10 @@
 <h3>Incoming Group Summary</h3>
 
-<b>Total Calls: </b> 
+<b>Total Calls: </b>
 <span><%= @total %></span>
 </br>
 <b> Total Talking Time</b>
-<span><%= @calltotals %></span>
+<span><%= @test %></span>
 </br>
 <b> Total Ring Time</b>
 <span><%= @totalring %></span>
@@ -54,5 +54,5 @@
 				<td><%= broker.park_time %></td>
 			</tr>
 		<% end %>
-	</tbody> 
+	</tbody>
 </table>
