--- a/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
+++ b/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
@@ -1,13 +1,21 @@
 <h3>Incoming Group Summary</h3>
 
 <b>Total Calls: </b>
-<span><%= @total %></span>
+<span><%= @totalcall %></span>
 </br>
-<b> Total Talking Time</b>
-<span><%= @test %></span>
+<b> Total Talking Time:</b>
+<span><%= @totalduration %></span>
 </br>
-<b> Total Ring Time</b>
+<b> Total Ring Time:</b>
 <span><%= @totalring %></span>
+</br>
+<b> Total Hold Time:</b>
+<span><%= @totalhold %></span>
+</br>
+<b> Total Park Time:</b>
+<span><%= @totalpark %></span>
+
+
 
 <table class ="table table-striped">
 	<thead>
