--- a/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
+++ b/ruby/rails/callreports/app/views/reports/inboundtogroup.html.erb
@@ -1,4 +1,4 @@
-<h3>Incoming Group Summary</h3>
+<h3>Incoming Group Summary - Brokers</h3>
 
 <b>Total Calls: </b>
 <span><%= @totalcall %></span>
@@ -12,8 +12,18 @@
 <b> Total Hold Time:</b>
 <span><%= @totalhold %></span>
 </br>
-<b> Total Park Time:</b>
-<span><%= @totalpark %></span>
+<b> Average Talking Time:</b>
+<span><%= @avgduration %></span>
+</br>
+<b> Average Ring Time:</b>
+<span><%= @avgring %></span>
+</br>
+<b> Average Hold Time:</b>
+<span><%= @avghold %></span>
+</br>
+<b> Average Park Time:</b>
+<span><%= @avgpark %></span>
+</br>
 
 
 
