Added layout for smartreception

--- a/ruby/rails/smartreception/app/assets/stylesheets/application.css
+++ b/ruby/rails/smartreception/app/assets/stylesheets/application.css
@@ -12,4 +12,41 @@
  *
  *= require_tree .
  *= require_self
+ *= require 'flexbox'
  */
+ .cameraCanvas {
+
+     display: inline-block;
+     margin: 10;
+ }
+
+ .cameraArea-left  {
+
+ 	display: flex;
+     flex-flow: row;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     justify-content: flex-start;
+     align-content: flex-start;
+     align-items: flex-start;
+
+ }
+
+ .cameraArea-right {
+
+    display: flex;
+     flex-flow: row;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     justify-content: flex-end;
+     align-content: flex-end;
+     align-items: flex-end;
+ }
+
+
+ #fadeandscale {
+   transform: scale(0.8);
+ }
+ .popup_visible #fadeandscale {
+   transform: scale(1);
+ }
