--- a/ruby/rails/smartreception/app/views/cameras/index.html.erb
+++ b/ruby/rails/smartreception/app/views/cameras/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Camera#index</h1>
-<p>Find me in app/views/camera/index.html.erb</p>
+
+<% @cameras.each do |cams| %>
+        <div class="cameraCanvas">
+            <img src="http://<%= cams.NetworkAddress %>:<%= cams.Port %>/snapshot.cgi?user=<%= cams.Username %>&pwd=<%= cams.Password %>&t=" onload='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 1000)' onerror='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 5000)' height="200" width="400" alt='' />
+                <div class="cameraArea-left">
+                     <button id="startCall" class="fadeandscale_open"><%= image_tag "call.png", size: "40" %></button>
+                     <button id="endCall"><%= image_tag "hangup.png", size: "40" %></button>
+                     <button type="submit"><%= image_tag "search.png", size: "40" %></button>
+                     <button type="submit"><%= image_tag "settings.png", size: "40" %></button>
+                     <img src="" width="100" height="40" alt="">
+                     <button type="submit"><%= image_tag "door.png", size: "40" %></button>
+                  </div>
+        </div>
+
+<% end %>
+
+<div id="fadeandscale">
+    <center><video id="remoteVideo" height="600" width="800"></video></center>
+    <center><video id="localVideo" height="200" width="200" muted="muted"></video></center>
+</div>
+
+<script>
+  $(document).ready(function() {
+
+    // Initialize the plugin
+    $('#fadeandscale').popup({transition: 'all 0.8s'});
+  })
+
+</script>
