--- a/ruby/rails/smartreception/app/views/cameras/new.html.erb
+++ b/ruby/rails/smartreception/app/views/cameras/new.html.erb
@@ -2,11 +2,23 @@
 
 <%= form_for :camera, url: cameras_path do |f| %>
 
-<p><%= f.label :DisplayName %></br>
+<p><%= f.label "Camera Name" %></br>
 <p><%= f.text_field :DisplayName %>
 
-<p><%= f.label :NetworkAddress %></br><p>
+<p><%= f.label "Camera IP Address" %></br><p>
 <p><%= f.text_field :NetworkAddress %><p>
+
+<p><%= f.label "Camera Port" %></br><p>
+<p><%= f.text_field :Port %><p>
+
+<p><%= f.label "Camera User" %></br><p>
+<p><%= f.text_field :Username %><p>
+
+<p><%= f.label "Camera Password" %></br><p>
+<p><%= f.text_field :Password %><p>
+
+<p><%= f.label "SIP Account" %></br><p>
+<p><%= f.text_field :SkypeUsername %><p>
 
 <p><%= f.submit %></p>
 
