--- a/ruby/rails/smartreception/app/views/cameras/index.html.erb
+++ b/ruby/rails/smartreception/app/views/cameras/index.html.erb
@@ -8,7 +8,7 @@
                      <button type="submit"><%= image_tag "search.png", size: "40" %></button>
                      <button type="submit"><%= image_tag "settings.png", size: "40" %></button>
                      <img src="" width="100" height="40" alt="">
-                     <button type="submit"><%= image_tag "door.png", size: "40" %></button>
+                     <button id="lockButton" value = "70" ><%= image_tag "door.png", size: "40"  %></button>
                   </div>
         </div>
 
@@ -21,3 +21,4 @@
 
 <%= javascript_include_tag("sip-0.7.2.min") %>
 <%= javascript_include_tag("call") %>
+<%= javascript_include_tag("keycard") %>
