--- a/ruby/rails/smartreception/app/views/cameras/new.html.erb
+++ b/ruby/rails/smartreception/app/views/cameras/new.html.erb
@@ -20,6 +20,13 @@
 <p><%= f.label "SIP Account" %></br><p>
 <p><%= f.text_field :SkypeUsername %><p>
 
+<p><%= f.label "Door ID 1" %></br><p>
+<p><%= f.text_field :Door1_Id %><p>
+
+<p><%= f.label "Door ID 2" %></br><p>
+<p><%= f.text_field :Door2_Id %><p>
+
+
 <p><%= f.submit %></p>
 
 <% end %>
