--- a/ruby/rails/smartreception/app/views/cameras/client.html.erb
+++ b/ruby/rails/smartreception/app/views/cameras/client.html.erb
@@ -1,6 +1,10 @@
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script> -->
 
+<%= stylesheet_link_tag("client") %>
+<%= stylesheet_link_tag("site") %>
+
+
 <div id="slide"></div>
 <div id="header_footer"></div>
 <div id="prop_address">
@@ -8,6 +12,14 @@
      | MLS# | VIRTUAL TOUR #1234567
 
 </div>
+<!--
+<div class="wrapper">
+			<video id="video" autoplay></video>
+			<div class="motion-box"></div>
+
+</div>
+
+-->
 <div id="agent_ph">
     <p>Agent Name</p>
     <hr></hr>
@@ -16,7 +28,6 @@
 </div>
 
 <div id="sponsor"><p>Sponsor Bank | Advertisement | (602) 230-7600</p></div>
-
 
 <div id="weather-container">
 
@@ -32,7 +43,14 @@
     <div id="day-flex"><div class="lastDay"></div></div>
 </div>
 
+<div id="fadeandscale">
+  <center><video id="remoteVideo" height="600" width="800"></video></center>
+  <center><video id="localVideo" muted="muted" height="200" width="200"></video></center>
+</div>
 
 
-<!-- <script src="src\jquery-3.1.0.min.js"></script> -->
+
+
+<%= javascript_include_tag("sip-0.7.2.min") %>
+<%= javascript_include_tag("client") %>
 <%= javascript_include_tag("getListings") %>
